--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
-name: 'Container Action Template'
-description: 'Get started with Container actions'
-author: 'GitHub'
-inputs: 
+name: Frictionless Repository
+description: Continious data validation
+author: Frictionless Data
+inputs:
   myInput:
-    description: 'Input to use'
-    default: 'world'
+    description: Input to use
+    default: world
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: docker
+  image: Dockerfile
