--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -20,6 +20,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Validate data
-        uses: frictionlessdata/repository@master
+        uses: frictionlessdata/repository@main
         with:
           myInput: 'Frictionless'
