--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   },
   "homepage": "https://github.com/frictionlessdata/repository#readme",
   "dependencies": {
+    "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.7",
-    "@actions/io": "^1.1.0",
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0",
-    "@actions/tool-cache": "^1.6.1"
+    "@actions/io": "^1.1.0",
+    "@actions/tool-cache": "^1.6.1",
+    "@types/js-yaml": "^4.0.1",
+    "globby": "^11.0.3",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
