--- a/action.yml
+++ b/action.yml
@@ -2,9 +2,9 @@ name: Frictionless Repository
 description: Continious data validation
 author: Frictionless Data
 inputs:
-  myInput:
-    description: Input to use
-    default: world
+  inquiry:
+    description: A default inquiry's property name
+    default: main
 runs:
   using: docker
   image: Dockerfile
