--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "eslint-plugin-standard": "^4.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jszip": "^3.6.0",
+    "node-fetch": "^2.6.1",
     "npm-check-updates": "^11.5.10",
     "prettier": "^2.3.0",
     "ts-jest": "^26.5.6",
