--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -32,27 +32,28 @@ jobs:
 
   # Deploy
 
-  # deploy:
-    # if: github.event_name == 'push'
-    # runs-on: ubuntu-latest
-    # steps:
-      # - name: Checkout repository
-        # uses: actions/checkout@v2
-      # - name: Install Node
-        # uses: actions/setup-node@v1
-        # with:
-          # node-version: 14
-      # - name: Install and build
-        # run: |
-          # npm install
-          # npm run build-storybook
-      # - name: Publush to Github Pages
-        # uses: JamesIves/github-pages-deploy-action@3.7.1
-        # with:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # BRANCH: storybook
-          # FOLDER: build
-          # CLEAN: true
+  deploy:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Install and build portal
+        run: |
+          cd portal
+          npm install
+          npm run build
+      - name: Publush to Github Pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: portal
+          FOLDER: portal/build
+          CLEAN: true
 
   # Release
 
