--- a/portal/package.json
+++ b/portal/package.json
@@ -39,6 +39,7 @@
     "npm-to-yarn": "^1.0.0-2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-safe": "^1.3.0",
     "workbox-routing": "^5.0.0",
     "workbox-strategies": "^5.0.0"
   },
