Split passing/failing workflows

--- a/.github/frictionless.yaml
+++ b/.github/frictionless.yaml
@@ -1,4 +1,8 @@
-main:
+passing:
   tasks:
     - source: data/valid.csv
-    # - source: data/invalid.csv
+
+failing:
+  tasks:
+    - source: data/valid.csv
+    - source: data/invalid.csv
