--- a/.github/workflows/passing.yaml
+++ b/.github/workflows/passing.yaml
@@ -21,3 +21,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Validate data
         uses: frictionlessdata/repository@main
+        with:
+          inquiry: passing
