--- a/.github/workflows/experimental.yaml
+++ b/.github/workflows/experimental.yaml
@@ -22,5 +22,5 @@ jobs:
       - name: Validate data
         uses: frictionlessdata/repository@main
         with:
-          inquiry: failing
+          inquiry: passing
 
