--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Continious data validation",
   "main": "lib/main.js",
   "scripts": {
-    "build": "npm run compile",
-    "compile": "rm -rf lib && tsc",
-    "format": "prettier --write 'src/**/*.ts*' && eslint --fix 'src/**/*.ts*'",
-    "lint": "prettier --check 'src/**/*.ts*' && eslint 'src/**/*.ts*'",
+    "format": "prettier --write 'lib/**/*.js*' && eslint --fix 'lib/**/*.js*'",
+    "lint": "prettier --check 'lib/**/*.js*' && eslint 'lib/**/*.js*'",
     "pretest": "npm run lint",
     "test": "jest --coverage",
     "update": "ncu -u"
@@ -29,7 +27,7 @@
     "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.7",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^4.0.0",
+    "@actions/github": "^5.0.0",
     "@actions/io": "^1.1.0",
     "@actions/tool-cache": "^1.6.1",
     "@types/js-yaml": "^4.0.1",
@@ -37,13 +35,9 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.1.0",
@@ -51,10 +45,7 @@
     "jest": "^26.6.3",
     "jszip": "^3.6.0",
     "node-fetch": "^2.6.1",
-    "npm-check-updates": "^11.5.10",
-    "prettier": "^2.3.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "npm-check-updates": "^11.5.13",
+    "prettier": "^2.3.0"
   }
 }
