--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@actions/io": "^1.1.0",
     "@actions/tool-cache": "^1.6.1",
     "@types/js-yaml": "^4.0.1",
+    "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
     "js-yaml": "^4.1.0"
   },
