--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.14.0",
   "description": "Continious data validation",
   "main": "lib/index.js",
-  "type": "module",
   "scripts": {
     "coverage": "sensible-browser coverage/index.html",
     "format": "prettier --write '{lib,test}/**/*.js*' && eslint --fix '{lib,test}/**/*.js*'",
     "lint": "prettier --check '{lib,test}/**/*.js*' && eslint '{lib,test}/**/*.js*'",
     "prepare": "husky install",
     "pretest": "npm run lint",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --coverage",
+    "test": "jest --coverage",
     "update": "ncu -u"
   },
   "repository": {
@@ -50,6 +49,7 @@
     "jszip": "^3.6.0",
     "node-fetch": "^2.6.1",
     "npm-check-updates": "^11.5.13",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "tmp-promise": "^3.0.2"
   }
 }
