--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frictionless-repository",
   "version": "1.0.0",
-  "description": "Continious data validation",
+  "description": "Data management service that brings continuous data validation to tabular data in your repository via Github Action",
   "main": "lib/index.js",
   "scripts": {
     "coverage": "sensible-browser coverage/index.html",
