--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -58,14 +58,16 @@ jobs:
 
   # Release
 
-  release:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    needs: [test]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Release to GitHub
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # Don't create a release automatically for now
+  # https://github.com/frictionlessdata/repository/issues/15
+  # release:
+    # if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    # runs-on: ubuntu-latest
+    # needs: [test]
+    # steps:
+      # - name: Checkout repository
+        # uses: actions/checkout@v2
+      # - name: Release to GitHub
+        # uses: softprops/action-gh-release@v1
+        # env:
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
